enhance bus-arrival for --prod

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -23,7 +23,7 @@
     <meta name="theme-color" content="#1976d2" />
   </head>
 
-  <body class="bg-light">
+  <body class="liyc-bg-light">
     <app-root>Loading...</app-root>
     <noscript>
       Please enable JavaScript to continue using this application.
