update oxford dictionary to v2.

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,12 +9,12 @@
     />
 
     <base href="/" />
-    <title>InSg</title>
+    <title>InSG</title>
     <meta
       name="description"
-      content="Gifts dealer target Singapore market with supplier in Singapore, China and other ASEAN countries."
+      content="Work and Live In Singapore. Gadgets for make life easier such as Next Bus Arrival Time, Oxford Dictionaries, Free Email, Small Company Email Hosting."
     />
-    <meta name="keywords" content="Corporate Gifts, Singapore" />
+    <meta name="keywords" content="Bus Arrival, Next Bus, Oxford dictionaries, free email, email hosting, Gadgets, Singapore" />
 
     <link rel="icon" type="image/png" href="/assets/icon.png" />
     <link rel="me" href="mailto:yuanchao@outlook.sg" />
