--- a/client/src/index.html
+++ b/client/src/index.html
@@ -17,7 +17,7 @@
     <meta name="keywords" content="Bus Arrival, Next Bus, Oxford dictionaries, free email, email hosting, Gadgets, Singapore" />
 
     <link rel="icon" type="image/png" href="/assets/icon.png" />
-    <link rel="me" href="mailto:yuanchao@outlook.sg" />
+    <link rel="me" href="mailto:yc@insg.xyz" />
     <meta name="author" content="yc" />
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#1976d2" />
