--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <base href="/" />
-    <title>InSG</title>
-    <meta
-      name="description"
-      content="Work and Live In Singapore. Gadgets for make life easier such as Next Bus Arrival Time, Oxford Dictionaries, Free Email, Small Company Email Hosting."
-    />
-    <meta name="keywords" content="Bus Arrival, Next Bus, Oxford dictionaries, free email, email hosting, Gadgets, Singapore" />
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <link rel="icon" type="image/png" href="/assets/icon.png" />
-    <link rel="me" href="mailto:yc@insg.xyz" />
-    <meta name="author" content="yc" />
-    <link rel="manifest" href="manifest.json" />
-    <meta name="theme-color" content="#1976d2" />
-  </head>
+  <base href="/" />
+  <title>InSG</title>
+  <meta name="description"
+    content="Work and Live In Singapore. Gadgets to make life easier such as Next Bus Arrival Time, Oxford Dictionaries, Free Email, Small Company Email Hosting." />
+  <meta name="keywords"
+    content="Bus Arrival, Next Bus, Oxford dictionaries, free email, email hosting, Gadgets, InSG, Singapore" />
 
-  <body class="bg-light">
-    <app-root>Loading...</app-root>
-    <noscript>
-      Please enable JavaScript to continue using this application.
-    </noscript>
-  </body>
+  <link rel="icon" type="image/png" href="/assets/icon.png" />
+  <link rel="me" href="mailto:yc@insg.xyz" />
+  <meta name="author" content="yc" />
+  <link rel="manifest" href="manifest.json" />
+  <meta name="theme-color" content="#1976d2" />
+</head>
+
+<body class="bg-light">
+  <app-root>Loading...</app-root>
+  <noscript>
+    Please enable JavaScript to continue using this application.
+  </noscript>
+</body>
+
 </html>
