--- a/client/src/index.html
+++ b/client/src/index.html
@@ -20,7 +20,7 @@
   <meta name="theme-color" content="#1976d2" />
 </head>
 
-<body class="bg-light">
+<body>
   <app-root>Loading...</app-root>
   <noscript>
     Please enable JavaScript to continue using this application.
