--- a/client/src/index.html
+++ b/client/src/index.html
@@ -13,6 +13,9 @@
   <meta name="keywords"
     content="Bus Arrival, Next Bus, Oxford dictionaries, free email, email hosting, Gadgets, InSG, Singapore" />
 
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
   <link rel="icon" type="image/png" href="/assets/icon.png" />
   <link rel="me" href="mailto:yc@insg.xyz" />
   <meta name="author" content="yc" />
